more guideline changes

--- a/artifacts/acvp_sub_kdf135_ikev1.html
+++ b/artifacts/acvp_sub_kdf135_ikev1.html
@@ -482,7 +482,7 @@
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> <a href="#caps_reg" id="caps_reg">Capabilities Registration</a></h1>
 <p id="rfc.section.2.p.1">ACVP requires crypto modules to register their capabilities.  This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  This section describes the constructs for advertising support of SP800-135 KDF algorithms to the ACVP server.</p>
-<p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for SP800-135 KDF algorithm capabilities:</p>
+<p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capabilityExchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for SP800-135 KDF algorithm capabilities:</p>
 <div id="rfc.table.1"/>
 <div id="caps_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -505,14 +505,14 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">hmacval</td>
+      <td class="left">hmacVal</td>
       <td class="left">The HMAC validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">shaval</td>
+      <td class="left">shaVal</td>
       <td class="left">The SHA validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
@@ -540,7 +540,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">dhkey</td>
+      <td class="left">dhKey</td>
       <td class="left">Array of up to three Diffie-Hellman shared secret key lengths in bits and array of SHA sizes supported for the each length</td>
       <td class="left">array</td>
       <td class="left">0-8192</td>
@@ -582,9 +582,9 @@
 <p/>
 
 <ul>
-  <li>digsign (Digital Signature)</li>
+  <li>digSign (Digital Signature)</li>
   <li>pke (Public Key Encryption)</li>
-  <li>pskey (Pre-shared Key)</li>
+  <li>psKey (Pre-shared Key)</li>
 </ul>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual Key Derivation Function (KDF), such as SNMP, SSH,  etc.  This section describes the JSON schema for a test vector set used with SP800-135 KDF algorithms.</p>
@@ -602,12 +602,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
@@ -617,14 +617,14 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_groups</td>
+      <td class="left">testGroups</td>
       <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 3.1</a></td>
       <td class="left">array</td>
     </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the IKEv1 JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the IKEv1 JSON elements of the Test Group JSON object.</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table1"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -645,7 +645,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">gxylen</td>
+      <td class="left">gxyLen</td>
       <td class="left">Diffie-Hellman shared secret length in bits</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -657,19 +657,19 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">initlen</td>
+      <td class="left">initLen</td>
       <td class="left">Length of initiator nonce</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">resplen</td>
+      <td class="left">respLen</td>
       <td class="left">Length of responder nonce</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">pkeylen</td>
+      <td class="left">pkeyLen</td>
       <td class="left">Pre-shared key length</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
@@ -698,7 +698,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">tc_id</td>
+      <td class="left">tcId</td>
       <td class="left">Unique numeric identifier for the test case</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -734,7 +734,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">pskey</td>
+      <td class="left">psKey</td>
       <td class="left">Value of the pre-shared key</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
@@ -756,17 +756,17 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_results</td>
+      <td class="left">testResults</td>
       <td class="left">Array of JSON objects that represent each test vector result, as defined by the tables below</td>
       <td class="left">array</td>
     </tr>
@@ -786,22 +786,22 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">skeyid</td>
+      <td class="left">sKeyId</td>
       <td class="left">Results of the extraction step</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">skeyid_d</td>
+      <td class="left">sKeyIdD</td>
       <td class="left">Results of the expansion step</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">skeyid_a</td>
+      <td class="left">sKeyIdA</td>
       <td class="left">Results of the expansion step</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">skeyid_e</td>
+      <td class="left">sKeyIdE</td>
       <td class="left">Results of the expansion step</td>
       <td class="left">value</td>
     </tr>
@@ -837,12 +837,12 @@
 
             {
                 "algorithm": "IKEv1",
-                "hmacval": "123456",
-                "shaval": "654321",
-		"methods" : ["pke", "pskey"],
+                "hmacVal": "123456",
+                "shaVal": "654321",
+		"methods" : ["pke", "psKey"],
 		"initiator" : [64, 2048],
 		"responder" : [64, 2048],
-		"dhkey" : [
+		"dhKey" : [
 			    {"length" : 224,
 			     "sha" : ["SHA-1", "SHA-256", "SHA-384", "SHA-512"]},
 			    {"length" : 1024,
@@ -856,19 +856,19 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-135 KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acv_version": "0.2",
-                  "vs_id": 1564,
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
                   "algorithm": "IKEv1",
-                  "test_groups": [
+                  "testGroups": [
                     {
                       "method": "pke",
-		      "gxylen" : 1024,
+		      "gxyLen" : 1024,
 		      "sha" : "SHA-1",
-		      "initlen" : 64,
-		      "resplen" : 64,
+		      "initLen" : 64,
+		      "respLen" : 64,
                       "tests": [
                         {
-                          "tc_id": 2170,
+                          "tcId": 2170,
 			  "ckyi" " "890511bb8239cf37",
 			  "ckyr" : "338e184c904b8439",
 			  "ni" : "fdaa0e5dacb97021",
@@ -884,15 +884,15 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-135 KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acv_version": "0.2",
-                    "vs_id": 1564,
-                    "test_results": [
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
                         {
-                            "tc_id": 2170,
-			    "skeyid" : "aae05d34e6162ebd6d35b3b70f7eb0b61d4ad4b6",
-			    "skeyid_d" : "d8d40b40ecb2c6d3b59e7b515dd92f977e87f96e",
-			    "skeyid_a" : "fc22eabab561ece6bb789a266376812e2942211d",
-			    "skeyid_e" : "8a1e83faaca3b671256c765f44abf92f995abae9",
+                            "tcId": 2170,
+			    "sKeyId" : "aae05d34e6162ebd6d35b3b70f7eb0b61d4ad4b6",
+			    "sKeyIdD" : "d8d40b40ecb2c6d3b59e7b515dd92f977e87f96e",
+			    "sKeyIdA" : "fc22eabab561ece6bb789a266376812e2942211d",
+			    "sKeyIdE" : "8a1e83faaca3b671256c765f44abf92f995abae9",
                         }
                     ]
                 }
