--- a/artifacts/acvp_sub_kdf135_ikev2.html
+++ b/artifacts/acvp_sub_kdf135_ikev2.html
@@ -503,14 +503,14 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">hmacval</td>
+      <td class="left">hmacVal</td>
       <td class="left">The HMAC validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">shaval</td>
+      <td class="left">shaVal</td>
       <td class="left">The SHA validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
@@ -531,7 +531,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">dhkey</td>
+      <td class="left">dhKey</td>
       <td class="left">Array of up to three Diffie-Hellman shared secret key lengths in bits and array of SHA sizes supported for the each length</td>
       <td class="left">array</td>
       <td class="left">0-8192</td>
@@ -545,7 +545,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">dkmlen</td>
+      <td class="left">dkmLen</td>
       <td class="left">Minimum and maximum lengths of the 7 keys derived by SKEYSEED in bytes</td>
       <td class="left">array</td>
       <td class="left">0-65536</td>
@@ -584,12 +584,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
@@ -599,14 +599,14 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_groups</td>
+      <td class="left">testGroups</td>
       <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 3.1</a></td>
       <td class="left">array</td>
     </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the IKEv2 JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the IKEv2 JSON elements of the Test Group JSON object.</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table1"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -621,7 +621,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">girlen</td>
+      <td class="left">girLen</td>
       <td class="left">Diffie-Hellman shared secret length in bits</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -633,13 +633,13 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">initlen</td>
+      <td class="left">initLen</td>
       <td class="left">Length of initiator nonce</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">resplen</td>
+      <td class="left">respLen</td>
       <td class="left">Length of responder nonce</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -651,7 +651,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">dkmchild</td>
+      <td class="left">dkmChild</td>
       <td class="left">Derived Key Matrerial for the child security authority in bytes</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -680,7 +680,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">tc_id</td>
+      <td class="left">tcId</td>
       <td class="left">Unique numeric identifier for the test case</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -704,7 +704,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">girnew</td>
+      <td class="left">girNew</td>
       <td class="left">New Diffie-Hellman shared secret</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -738,17 +738,17 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_results</td>
+      <td class="left">testResults</td>
       <td class="left">Array of JSON objects that represent each test vector result, as defined by the tables below</td>
       <td class="left">array</td>
     </tr>
@@ -768,12 +768,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">skeyseed</td>
+      <td class="left">sKeySeed</td>
       <td class="left">Results of the extraction step</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">skeyseed_rekey</td>
+      <td class="left">sKeySeedRekey</td>
       <td class="left">Results of the newly created skeyid</td>
       <td class="left">value</td>
     </tr>
@@ -783,12 +783,12 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">dkm_child</td>
+      <td class="left">dkmChild</td>
       <td class="left">Expansion step results for child SA</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">dkm_child_dh</td>
+      <td class="left">dkmChildDH</td>
       <td class="left">Expansion step results for child SA DH</td>
       <td class="left">value</td>
     </tr>
@@ -824,12 +824,12 @@
 
             {
                 "algorithm": "IKEv2",
-                "hmacval": "123456",
-                "shaval": "654321",
+                "hmacVal": "123456",
+                "shaVal": "654321",
 		"initiator" : [128, 2048],
 		"responder" : [128, 2048],
-		"dkmlen" : [1056, 3072],
-		"dhkey" : [
+		"dkmLen" : [1056, 3072],
+		"dhKey" : [
 			    {"length" : 224,
 			     "sha" : ["SHA-1", "SHA-256", "SHA-384", "SHA-512"]},
 			    {"length" : 8192,
@@ -841,24 +841,24 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-135 KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acv_version": "0.2",
-                  "vs_id": 1564,
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
                   "algorithm": "IKEv2",
-                  "test_groups": [
+                  "testGroups": [
                     {
-		      "girlen" : 224,
+		      "girLen" : 224,
 		      "sha" : "SHA-1",
-		      "initlen" : 128,
-		      "resplen" : 128,
-		      "dkmlen" : 1056,
-		      "dkmchildlen" : 1056,
+		      "initLen" : 128,
+		      "respLen" : 128,
+		      "dkmLen" : 1056,
+		      "dkmChildLen" : 1056,
                       "tests": [
                         {
-                          "tc_id": 2170,
+                          "tcId": 2170,
 			  "ni" : "d6e106297cdbdfa858340842f7e8177a",
 			  "nr" : "23a498f2862ca8d80049340797815f8d",
 			  "gir" : "b1d49a782337e866e41a6626a561b423b7dd368c46292f610d554aff",
-			  "girnew" : "897c7be2a35af41e844f9d80df7a70d88ed1f0d6ff916f95a069efe4",
+			  "girNew" : "897c7be2a35af41e844f9d80df7a70d88ed1f0d6ff916f95a069efe4",
 			  "spii" : "d49e0a11c35e989f",
 			  "spir" : "ab4192dfd0e37333",
                         },
@@ -871,16 +871,16 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-135 KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acv_version": "0.2",
-                    "vs_id": 1564,
-                    "test_results": [
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
                         {
-                            "tc_id": 2170,
-			    "skeyseed" : "59dbb66af31264f955fa72b6a3b0ff68b414e8f5"
+                            "tcId": 2170,
+			    "sKeySeed" : "59dbb66af31264f955fa72b6a3b0ff68b414e8f5"
 			    "dkm" : "76a35ca17b3de68999c2e73fcf94ca793d88e5cfb9f509e1ae5c9c245338d3652446c967122ee98ac6ac75dec39edeea8fbd2ca18e596d32e19f17b65caaa2af9697bfdcdc83e90bfdb89d7fdfbbb73e7f194de5eea717d8451b972a5e63e54067a39e25db739660bcc768469e003c707399ae5c294f13630acf32a0853c3a8469d89f0c",
-			    "dkm_child" : "c9d2e20781d56f0442258c69b2575667106af5ca805e8d507b68c50d2b724e8df833a47599ba97575251408ffb0cff81ef7abe3fc7eb34ff37bfdb7ddc2d7d348ffada65957894be90d0cc982d2244f10c19f2027735f658a8089c0a1fb2557af6da312d5f1dd93b4ca5b35cc4377a092d00e816e97ce63cbd00f4df91ea2a4fd39fca53",
-			    "dkm_child_dh" : "6acfad2a4e95ec7f9c2cd084976d0a95ebaf99818396bb23304a84296c179b3dd31a83e396fb8a77c71264839315436beae2281593a62ba31c02475651b2fded0a1afdd2634909ca7762b149a25a9948a23ef9460a354b0928aadacf72f3276667f730579f1a4d325ebf61f0c0badbecd08c9e0177472c5b4dccdc48393ce18d02ebfa92"
-			    "skeyseed_rekey" : "31bf324a192f519be4d9c157adc7d194b4167215",
+			    "dkmChild" : "c9d2e20781d56f0442258c69b2575667106af5ca805e8d507b68c50d2b724e8df833a47599ba97575251408ffb0cff81ef7abe3fc7eb34ff37bfdb7ddc2d7d348ffada65957894be90d0cc982d2244f10c19f2027735f658a8089c0a1fb2557af6da312d5f1dd93b4ca5b35cc4377a092d00e816e97ce63cbd00f4df91ea2a4fd39fca53",
+			    "dkmChildDH" : "6acfad2a4e95ec7f9c2cd084976d0a95ebaf99818396bb23304a84296c179b3dd31a83e396fb8a77c71264839315436beae2281593a62ba31c02475651b2fded0a1afdd2634909ca7762b149a25a9948a23ef9460a354b0928aadacf72f3276667f730579f1a4d325ebf61f0c0badbecd08c9e0177472c5b4dccdc48393ce18d02ebfa92"
+			    "sKeySeedRekey" : "31bf324a192f519be4d9c157adc7d194b4167215",
                         }
                     ]
                 }
