--- a/artifacts/acvp_sub_kdf135_srtp.html
+++ b/artifacts/acvp_sub_kdf135_srtp.html
@@ -505,7 +505,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">aesval</td>
+      <td class="left">aesVal</td>
       <td class="left">The AES validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
@@ -574,12 +574,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
@@ -589,14 +589,14 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_groups</td>
+      <td class="left">testGroups</td>
       <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 3.1</a></td>
       <td class="left">array</td>
     </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.3.1.p.2">The KDF test group for SRTP is as follows:</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table5"/>
@@ -647,19 +647,19 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">tc_id</td>
+      <td class="left">tcId</td>
       <td class="left">Unique numeric identifier for the test case</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">kmaster</td>
+      <td class="left">kMaster</td>
       <td class="left">Master key value</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">msalt</td>
+      <td class="left">mSalt</td>
       <td class="left">Master salt value</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -671,13 +671,13 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">index</td>
+      <td class="left">indexSCTP</td>
       <td class="left">Index value for SCTP</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">indexsrtcp</td>
+      <td class="left">indexSRTCP</td>
       <td class="left">Index value for SRTCP</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -699,17 +699,17 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_results</td>
+      <td class="left">testResults</td>
       <td class="left">Array of JSON objects that represent each test vector result, as defined by the tables below</td>
       <td class="left">array</td>
     </tr>
@@ -729,32 +729,32 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">srtp_ke</td>
+      <td class="left">srtpKE</td>
       <td class="left">SRTP encryption key</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">srtp_ka</td>
+      <td class="left">srtpKA</td>
       <td class="left">SRTP authentication key</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">srtp_ks</td>
+      <td class="left">srtpKS</td>
       <td class="left">SRTP salting key</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">srtcp_ke</td>
+      <td class="left">srtcpKE</td>
       <td class="left">SRTCP encryption key</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">srtcp_ka</td>
+      <td class="left">srtcpKA</td>
       <td class="left">SRTCP authentication key</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">srtcp_ks</td>
+      <td class="left">srtcpKS</td>
       <td class="left">SRTCP salting key</td>
       <td class="left">value</td>
     </tr>
@@ -790,7 +790,7 @@
 
             {
                 "algorithm": "SRTP",
-                "aesval": "123456",
+                "aesVal": "123456",
 		"methods" : ["AES-128-CBC", "AES-192-CBC", "AES-256-CBC" ],
 		"kdr" : [ "all"]
             }
@@ -799,21 +799,21 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-135 KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acv_version": "0.2",
-                  "vs_id": 1564,
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
                   "algorithm": "SRTP",
-                  "test_groups": [
+                  "testGroups": [
                     {
                       "method": "AES-128-CBC",
 		      "kdr" : "all",
                       "tests": [
                         {
-                          "tc_id": 2170,
-			  "kmaster" : "3a18bc2b15738e054f87014c9096da98",
-			  "msalt" : "85b9fa33b28a76b844fd453c3af7",
+                          "tcId": 2170,
+			  "kMaster" : "3a18bc2b15738e054f87014c9096da98",
+			  "mSalt" : "85b9fa33b28a76b844fd453c3af7",
 			  "kdr" : "000000000000",
-			  "index" : "92373bee6572",
-			  "indexsrtcp" : "1dfb5e64",
+			  "indexSCTP" : "92373bee6572",
+			  "indexSRTCP" : "1dfb5e64",
 
                         },
                       ]
@@ -825,17 +825,17 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-135 KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acv_version": "0.2",
-                    "vs_id": 1564,
-                    "test_results": [
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
                         {
-                            "tc_id": 2170,
-			    "srtp_ke" : "82e463c444f177ff459829c59e4c31e7",
-			    "srtp_ka" : "986bfe23803a98ad28abcc09466f758770244f34",
-			    "srtp_ks" : "1338f50d9ba6511c9a5c6360ad6e",
-			    "srtcp_ke" : "4e0c1fdf228b3564b6d2061bcf49d3ff",
-			    "srtcp_ka" : "0fd8416b54975965fd12ac4a84428dceea41281c",
-			    "srtcp_ks" : "88357f3f7c2c556b1f9a8ccbdbbf",
+                            "tcId": 2170,
+			    "srtpKE" : "82e463c444f177ff459829c59e4c31e7",
+			    "srtpKA" : "986bfe23803a98ad28abcc09466f758770244f34",
+			    "srtpKS" : "1338f50d9ba6511c9a5c6360ad6e",
+			    "srtcpKE" : "4e0c1fdf228b3564b6d2061bcf49d3ff",
+			    "srtcpKA" : "0fd8416b54975965fd12ac4a84428dceea41281c",
+			    "srtcpKS" : "88357f3f7c2c556b1f9a8ccbdbbf",
                         }
                     ]
                 }
