--- a/artifacts/acvp_sub_kdf135_x963.html
+++ b/artifacts/acvp_sub_kdf135_x963.html
@@ -503,7 +503,14 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">shaval</td>
+      <td class="left">hmacVal</td>
+      <td class="left">The HMAC validation number or implemented in same implementation</td>
+      <td class="left">value</td>
+      <td class="left">same or value</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">shaVal</td>
       <td class="left">The SHA validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
@@ -517,7 +524,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">keylen</td>
+      <td class="left">keyLen</td>
       <td class="left">Key length minimum and maximum</td>
       <td class="left">array</td>
       <td class="left">128-4096</td>
@@ -531,7 +538,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">sharedinfo</td>
+      <td class="left">sharedInfo</td>
       <td class="left">ANSI X9.63: Minimum and Maximum sharedinfo size in bits</td>
       <td class="left">array</td>
       <td class="left">0-1024</td>
@@ -570,12 +577,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
@@ -585,14 +592,14 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_groups</td>
+      <td class="left">testGroups</td>
       <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 4</a></td>
       <td class="left">array</td>
     </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.4.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.4.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.4.p.2">The KDF test group for ANS X9.63 is as follows:</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table3"/>
@@ -614,19 +621,19 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">shseclen</td>
+      <td class="left">shSecLen</td>
       <td class="left">The shared secret length used in bits</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">shinfolen</td>
+      <td class="left">shInfoLen</td>
       <td class="left">The sharedinfo length used in bits</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">keylen</td>
+      <td class="left">keyLen</td>
       <td class="left">The encryption key length used in bits</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -655,19 +662,19 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">tc_id</td>
+      <td class="left">tcId</td>
       <td class="left">Unique numeric identifier for the test case</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">Z</td>
+      <td class="left">z</td>
       <td class="left">Shared secret</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">sharedinfo</td>
+      <td class="left">sharedInfo</td>
       <td class="left">Shared information</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -689,17 +696,17 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_results</td>
+      <td class="left">testResults</td>
       <td class="left">Array of JSON objects that represent each test vector result, as defined by the tables below</td>
       <td class="left">array</td>
     </tr>
@@ -719,7 +726,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">kdata</td>
+      <td class="left">keyData</td>
       <td class="left">Key data value</td>
       <td class="left">value</td>
     </tr>
@@ -754,33 +761,33 @@
 
 
             {
-                "algorithm": "TLS",
-                "hmacval": "123456",
-                "shaval": "654321",
-		"methods" : ["TLS1.0/1.1", "TLS1.2"],
+                "algorithm": "ANSI X9.63",
+                "hmacVal": "123456",
+                "shaVal": "654321",
 		"sha" : [ "SHA-256", SHA-384", SHA-512"]
+		"field" : [224, 571],
+		"sharedInfo" : [0, 512],
+		"keyLen" : [128, 2048],
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-135 KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acv_version": "0.2",
-                  "vs_id": 1564,
-                  "algorithm": "TLS",
-                  "test_groups": [
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
+                  "algorithm": "ANSI X9.63",
+                  "testGroups": [
                     {
-                      "method": "TLS1.2",
-		      "pmlen" : 384,
-		      "kblen" : 1024,
+		      "sha" : "SHA-1"
+		      "shSecLen"" : 192,
+		      "sharedInfoLen" : 0,
+		      "keyLen" : 128,
                       "tests": [
                         {
-                          "tc_id": 2170,
-			  "pmsecret" : "1b4aecf96fc9029d4ce8c8539b6c97f25bcdf3510471f9607083dd2a6d25a0750bdfb2d87cb0ecc3046025c65d8d1a49",
-			  "shrnd" : "45afd73d8cb73450898e1ed87ace19d14c5b10274771b331213181290b71fc2d",
-			  "chrnd" : "75ee876ab02ea8fb3cb43426c7f28648946ae091281d66d35ff0e749d0547a6d",
-			  "srnd" : "d352f20cb79b7e8fea6274850a15963a852728609e29a1e7c54257031a91721a",
-			  "crnd" : "f667e99811fb1c226110ac606e7e06b11964956f22164d4b5d4e1304c2659436"
+                          "tcId": 2170,
+			  "z" : "1c7d7b5f0597b03d06a018466ed1a93e30ed4b04dc64ccdd",
+			  "sharedInfo" : "",
                         },
                       ]
                     },
@@ -791,13 +798,12 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-135 KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acv_version": "0.2",
-                    "vs_id": 1564,
-                    "test_results": [
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
                         {
-                            "tc_id": 2170,
-			    "msecret" : "e9359c60c2b290b3666f3d1658e21c49fa2653f5b45b06815bfc45a9d01766e09d292bf7139f5621c4990a7360559c67",
-			    "kblock" : "296f63ac740aa1f2953e86c9ae2073bc5d01d257fc20ec28c48c5f72d105a8ee408aeb56698f361a498b9be645de3ed4df6c6acb921517a3a962d3856f6a2cf749c13fbc2e2fb2d7b247e5adff311a348604213f2b137c49aac41cd657a0c2f50c6af92e48aa31e43fda97f2a60c4d4b1a4cf7a6ba49f4ecf4f96d9acb28c48",
+                            "tcId": 2170,
+			    "keyData" : "bf71dffd8f4d99223936beb46fee8ccc",
                         }
                     ]
                 }
