--- a/artifacts/acvp_sub_kdf135_snmp.html
+++ b/artifacts/acvp_sub_kdf135_snmp.html
@@ -503,21 +503,21 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">shaval</td>
+      <td class="left">shaVal</td>
       <td class="left">The SHA validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">EngineID</td>
+      <td class="left">engineID</td>
       <td class="left">SNMP: Two engine IDs in hexidecimal, can be the same</td>
       <td class="left">array</td>
       <td class="left">0-0xF</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">plen</td>
+      <td class="left">pLen</td>
       <td class="left">SNMP: Password minimum and maximum lengths</td>
       <td class="left">array</td>
       <td class="left">value</td>
@@ -556,12 +556,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
@@ -571,14 +571,14 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_groups</td>
+      <td class="left">testGroups</td>
       <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 3.1</a></td>
       <td class="left">array</td>
     </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.3.1.p.2">The KDF test group for SNMP is as follows:</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table6"/>
@@ -600,7 +600,7 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">plen</td>
+      <td class="left">pLen</td>
       <td class="left">Length of password</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -629,7 +629,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">tc_id</td>
+      <td class="left">tcId</td>
       <td class="left">Unique numeric identifier for the test case</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -657,17 +657,17 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_results</td>
+      <td class="left">testResults</td>
       <td class="left">Array of JSON objects that represent each test vector result, as defined by the tables below</td>
       <td class="left">array</td>
     </tr>
@@ -687,7 +687,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">skey</td>
+      <td class="left">sKey</td>
       <td class="left">Shared key value</td>
       <td class="left">value</td>
     </tr>
@@ -723,23 +723,23 @@
 
             {
                 "algorithm": "SNMP",
-                "shaval": "654321",
+                "shaVal": "654321",
             }
             </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-135 KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acv_version": "0.2",
-                  "vs_id": 1564,
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
                   "algorithm": "SNMP",
-                  "test_groups": [
+                  "testGroups": [
                     {
 		      "engineID" : "000002b87766554433221100",
-		      "plen" : 8,
+		      "pLen" : 8,
                       "tests": [
                         {
-                          "tc_id": 2170,
+                          "tcId": 2170,
 			  "password" : "TCBkyNVC",
                         },
                       ]
@@ -751,12 +751,12 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-135 KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acv_version": "0.2",
-                    "vs_id": 1564,
-                    "test_results": [
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
                         {
-                            "tc_id": 2170,
-			    "skey" : "d2fb36bc4c064c6f0ac35cc70e55e0ac652d8570",
+                            "tcId": 2170,
+			    "sKey" : "d2fb36bc4c064c6f0ac35cc70e55e0ac652d8570",
                         }
                     ]
                 }
