--- a/artifacts/acvp_sub_kdf135_tls.html
+++ b/artifacts/acvp_sub_kdf135_tls.html
@@ -505,14 +505,14 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">hmacval</td>
+      <td class="left">hmacVal</td>
       <td class="left">The HMAC validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">shaval</td>
+      <td class="left">shaVal</td>
       <td class="left">The SHA validation number or implemented in same implementation</td>
       <td class="left">value</td>
       <td class="left">same or value</td>
@@ -573,12 +573,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
@@ -588,14 +588,14 @@
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_groups</td>
+      <td class="left">testGroups</td>
       <td class="left">Array of test group JSON objects, which are defined in <a href="#tgjs">Section 3.1</a></td>
       <td class="left">array</td>
     </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.3.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <p id="rfc.section.3.1.p.2">The KDF test group for TLS is as follows:</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table7"/>
@@ -623,13 +623,13 @@
       <td class="left">Yes</td>
     </tr>
     <tr>
-      <td class="left">pmlen</td>
+      <td class="left">pmLen</td>
       <td class="left">Pre-master secret length in bits</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">kblen</td>
+      <td class="left">kbLen</td>
       <td class="left">Key block length in bits</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -658,37 +658,37 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">tc_id</td>
+      <td class="left">tcId</td>
       <td class="left">Unique numeric identifier for the test case</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">pmsecret</td>
+      <td class="left">pmSecret</td>
       <td class="left">Pre-master secret value</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">shrnd</td>
+      <td class="left">shRND</td>
       <td class="left">Server Hello random value</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">chrnd</td>
+      <td class="left">chRND</td>
       <td class="left">Client Hello random value</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">srnd</td>
+      <td class="left">sRND</td>
       <td class="left">Server random value</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">crnd</td>
+      <td class="left">cRND</td>
       <td class="left">Client random value</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -710,17 +710,17 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
+      <td class="left">acvVersion</td>
       <td class="left">Protocol version identifier</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">vs_id</td>
+      <td class="left">vsId</td>
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">test_results</td>
+      <td class="left">testResults</td>
       <td class="left">Array of JSON objects that represent each test vector result, as defined by the tables below</td>
       <td class="left">array</td>
     </tr>
@@ -740,12 +740,12 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">msecret</td>
+      <td class="left">mSecret</td>
       <td class="left">Master secret value</td>
       <td class="left">value</td>
     </tr>
     <tr>
-      <td class="left">kblock</td>
+      <td class="left">kBlock</td>
       <td class="left">Key block value of the expansion step</td>
       <td class="left">value</td>
     </tr>
@@ -781,8 +781,8 @@
 
             {
                 "algorithm": "TLS",
-                "hmacval": "123456",
-                "shaval": "654321",
+                "hmacVal": "123456",
+                "shaVal": "654321",
 		"methods" : ["TLS1.0/1.1", "TLS1.2"],
 		"sha" : [ "SHA-256", SHA-384", SHA-512"]
             }
@@ -791,23 +791,23 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for SP800-135 KDF test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
                 {
-                  "acv_version": "0.2",
-                  "vs_id": 1564,
+                  "acvVersion": "0.2",
+                  "vsId": 1564,
                   "algorithm": "TLS",
-                  "test_groups": [
+                  "testGroups": [
                     {
                       "method": "TLS1.2",
 		      "sha" : "SHA-256",
-		      "pmlen" : 384,
-		      "kblen" : 1024,
+		      "pmLen" : 384,
+		      "kbLen" : 1024,
                       "tests": [
                         {
-                          "tc_id": 2170,
-			  "pmsecret" : "1b4aecf96fc9029d4ce8c8539b6c97f25bcdf3510471f9607083dd2a6d25a0750bdfb2d87cb0ecc3046025c65d8d1a49",
-			  "shrnd" : "45afd73d8cb73450898e1ed87ace19d14c5b10274771b331213181290b71fc2d",
-			  "chrnd" : "75ee876ab02ea8fb3cb43426c7f28648946ae091281d66d35ff0e749d0547a6d",
-			  "srnd" : "d352f20cb79b7e8fea6274850a15963a852728609e29a1e7c54257031a91721a",
-			  "crnd" : "f667e99811fb1c226110ac606e7e06b11964956f22164d4b5d4e1304c2659436"
+                          "tcId": 2170,
+			  "pmSecret" : "1b4aecf96fc9029d4ce8c8539b6c97f25bcdf3510471f9607083dd2a6d25a0750bdfb2d87cb0ecc3046025c65d8d1a49",
+			  "shRND" : "45afd73d8cb73450898e1ed87ace19d14c5b10274771b331213181290b71fc2d",
+			  "chRND" : "75ee876ab02ea8fb3cb43426c7f28648946ae091281d66d35ff0e749d0547a6d",
+			  "sRND" : "d352f20cb79b7e8fea6274850a15963a852728609e29a1e7c54257031a91721a",
+			  "cRND" : "f667e99811fb1c226110ac606e7e06b11964956f22164d4b5d4e1304c2659436"
                         },
                       ]
                     },
@@ -818,13 +818,13 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for SP800-135 KDF test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 {
-                    "acv_version": "0.2",
-                    "vs_id": 1564,
-                    "test_results": [
+                    "acvVersion": "0.2",
+                    "vsId": 1564,
+                    "testResults": [
                         {
-                            "tc_id": 2170,
-			    "msecret" : "e9359c60c2b290b3666f3d1658e21c49fa2653f5b45b06815bfc45a9d01766e09d292bf7139f5621c4990a7360559c67",
-			    "kblock" : "296f63ac740aa1f2953e86c9ae2073bc5d01d257fc20ec28c48c5f72d105a8ee408aeb56698f361a498b9be645de3ed4df6c6acb921517a3a962d3856f6a2cf749c13fbc2e2fb2d7b247e5adff311a348604213f2b137c49aac41cd657a0c2f50c6af92e48aa31e43fda97f2a60c4d4b1a4cf7a6ba49f4ecf4f96d9acb28c48",
+                            "tcId": 2170,
+			    "mSecret" : "e9359c60c2b290b3666f3d1658e21c49fa2653f5b45b06815bfc45a9d01766e09d292bf7139f5621c4990a7360559c67",
+			    "kBlock" : "296f63ac740aa1f2953e86c9ae2073bc5d01d257fc20ec28c48c5f72d105a8ee408aeb56698f361a498b9be645de3ed4df6c6acb921517a3a962d3856f6a2cf749c13fbc2e2fb2d7b247e5adff311a348604213f2b137c49aac41cd657a0c2f50c6af92e48aa31e43fda97f2a60c4d4b1a4cf7a6ba49f4ecf4f96d9acb28c48",
                         }
                     ]
                 }
